--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,18 @@ go:
 jobs:
   include:
     - stage: GitHub Release
-      script: echo "Deploying to GitHub releases ..."
+      script: 
+        - echo "Building and Deploying to GitHub releases ..."
+        - go build
+        - GOOS=windows GOARCH=386 go build
+        - find .
       deploy:
         provider: releases
         api_key: $GITHUB_OAUTH_TOKEN
         skip_cleanup: true
+        file:
+          - "golkv373"
+          - "golkv373.exe"
         on:
           tags: true
 
