--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ jobs:
         api_key: $GITHUB_OAUTH_TOKEN
         skip_cleanup: true
         file:
-          - "lkv373"
+          - "golkv373"
+          - "golkv373.exe"
         on:
           tags: true
 
