--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ go:
 
 jobs:
   include:
+    - script: find .
     - stage: GitHub Release
       script: echo "Deploying to GitHub releases ..."
       deploy:
